[package]
name = "byte-muncher"
version = "0.1.0"
authors = ["inikulin <ifaaan@gmail.com>"]
edition = "2018"

[dependencies]
proc-macro2 = "0.4.30"
syn = { version = "0.15.39", features = ["extra-traits"] }
quote = "0.6.13"

[dev-dependencies]
pre-commit = "0.5.2"

[package.metadata.precommit]
fmt = "cargo fmt && git add -u"