[package]
name = "byte_muncher_grammar_macro"
version = "0.1.0"
authors = ["inikulin <ifaaan@gmail.com>"]
edition = "2018"

[dependencies]
proc-macro2 = "0.4.30"
syn = { version = "0.15.39", features = ["extra-traits"] }
quote = "0.6.13"

[dev-dependencies.cargo-husky]
version = "1.4.0"
default-features = false
features = ["user-hooks"]

